# c2pa-js

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  typedoc.json  vitest.workspace.ts
.changeset/: add-cr-json-reader.md  add-wasm-reader-frombytes.md  afraid-guests-find.md  afraid-lands-shave.md  brave-roses-obey.md  breezy-bats-battle.md  breezy-meteors-sit.md  busy-buckets-play.md  chilly-schools-behave.md  config.json  crazy-trees-poke.md  cute-coins-clean.md  dark-words-flow.md  dry-boats-hug.md  dry-colts-live.md  dull-bugs-eat.md  dull-tables-bake.md  eight-cloths-work.md  eleven-bars-lead.md  every-emus-retire.md  fancy-terms-melt.md  few-rivers-behave.md  five-rice-raise.md  fix-settings-object-serialization.md  flat-spoons-lick.md  forty-dodos-change.md  gold-files-sing.md  gold-hotels-wait.md  green-icons-win.md  grumpy-goats-marry.md  happy-numbers-wash.md  honest-clubs-crash.md  huge-birds-behave.md  humble-teams-say.md  late-lamps-try.md  lazy-actors-pump.md  loose-dogs-design.md  major-tires-make.md  old-foxes-hammer.md  petite-weeks-own.md  (+30 more)
.github/actions/install-dependencies/: action.yml
.github/workflows/: build-test.yml  ci.yml  closing-ticket.yml  publish-docs.yml  publish.yml  release.yml
common/api/: c2pa.api.json
common/changes/c2pa/: duggaraju-worker_module_2024-03-15-19-00.json  fix-template-optionality_2025-05-06-20-58.json  (+1 more)
common/changes/c2pa-wc/: secure-social-links_2025-07-21-16-52.json
docs/: hosting.md  overview.md  selectors.md  validation.md  viewing-manifest-data.md
tools/nx-wasm-bindgen/: README.md  eslint.config.mjs  executors.json  package.json  vite.config.ts
tools/nx-wasm-pack/: README.md  eslint.config.mjs  executors.json  package.json  vite.config.ts
tools/testbed/: README.md  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
(+9 files in other folders)
