
[workspace]
resolver = '2'
members = [
	'packages/c2pa-wasm',
	'packages/c2pa-types',
	'packages/c2pa-node',
]

[workspace.package]
rust-version = "1.88.0"

[workspace.dependencies]
c2pa = { version = "=0.89.0", features = ["pdf", "rust_native_crypto", "fetch_remote_manifests", "json_schema", "http_reqwest"], default-features = false }

[profile.release]
opt-level = "s"
lto = true

[patch.crates-io]
c2pa = { git = "https://github.com/trufo-ai/c2pa-rs.git", branch = "feat/c2pa-cawg-untrusted-differentiation" }
